--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,9 @@
 .header-logo {
     height: 150px !important;
     width: auto;
+    max-width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    object-fit: contain;
 }
