--- a/docs/style.css
+++ b/docs/style.css
@@ -15,6 +15,19 @@
     margin-bottom: 2em;
 }
 
+@media (orientation: portrait) {
+    .controller-flex {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .controller-preview {
+        width: 100%;
+        object-fit: contain;
+        margin: 0 auto;
+    }
+}
+
 .controller-preview {
     height: 300px !important;
 }
