--- a/docs/style.css
+++ b/docs/style.css
@@ -82,6 +82,14 @@ hr {
     }
 }
 
+/* Portrait image
+   ========================================================================== */
+
+.portrait {
+    display: block;
+    max-height: 500px;
+}
+
 /* ==========================================================================
    MkDocs styles
    ========================================================================== */
